# cg-template

./: .gitignore  CMakeLists.txt  project.cpp  true_test.cpp
